hphp/test/zend/good/ext/calendar/tests/bug53574_2.php
<?php
$x = 3315881921229094912;

var_dump(cal_from_jd($x, CAL_JULIAN));